hack to fix text contrast in gantt charts

--- a/customize.dist/src/less2/include/markdown.less
+++ b/customize.dist/src/less2/include/markdown.less
@@ -117,6 +117,11 @@
                 }
             }
             text {
+                &.taskText {
+                    &[class*="doneText"], &[class*="activeText"] {
+                        fill: #444 !important; // XXX PR to mermaid or find a suitable variable
+                    }
+                }
                 &.titleText {
                     fill: @cp_markdown-block-fg;
                 }
